--- a/index.html
+++ b/index.html
@@ -672,19 +672,19 @@ height: 200px;
                          <ul class="sidebar-buttons">
 						 <p><li class="sidebar-button">
 								<i class="sidebar-button-icon fa fa-mobile"></i>
-								<span class="sidebar-button-desc">+33 0768249323</span></a></li>
+								<span class="sidebar-button-desc">+33 0762127674</span></a></li>
 						</p>
 					    <p><li class="sidebar-button">
 								<i class="sidebar-button-icon fa fa-envelope-o"></i>
-								<span class="sidebar-button-desc">armelsoubeiga93@gmail.com</span></a></li>
+								<span class="sidebar-button-desc">alphous38@gmail.com</span></a></li>
 						</p>
 						<p><li class="sidebar-button">
-								<a class="sidebar-button-link " href="https://github.com/armelsoubeiga" target="_blank" rel="noopener">
+								<a class="sidebar-button-link " href="https://github.com/keitaalhousseni" target="_blank" rel="noopener">
 								<i class="sidebar-button-icon fa fa-github"></i>
 								<span class="sidebar-button-desc">Github</span></a></li>
 						</p>
 						<p><li class="sidebar-button">
-								<a class="sidebar-button-link " href="https://linkedin.com/in/armel-soubeiga-646316151" target="_blank" rel="noopener">
+								<a class="sidebar-button-link " href="#" target="_blank" rel="noopener">
 								<i class="sidebar-button-icon fa fa-linkedin"></i>
 								<span class="sidebar-button-desc">Linkedin</span></a></li>
 								
