--- a/index.html
+++ b/index.html
@@ -130,10 +130,10 @@ height: 200px;
                     <img alt="" class="img-circle img-me" src="0.jpg">
                 </div>
                 <div class="col-lg-7 col-md-7 col-sm-7 col-xs-12 media">
-                    <h3 class="name">KEITA Alh </h3>
+                    <h3 class="name">KEITA Alhousseni </h3>
                     <h4 class="font-thin">Developper Data Scientist Junior</h4>
-                    <p class="text-muted">Armel SOUBEIGA is a Data Scientist, an expert in data engineering and data management, with experience in statistical analysis. He is passionate about Data Mining, Machine Learning, Neural Network and Deep Learning. My technical skills cover a number of programming tools including R, Python, C, Apache Spark, SAS, SQL and HTML / CSS.</p>
-                    <p class="text-muted">Armel was educated at the Polytechnic University of Bobo Dioulasso in Burkina Faso, West Africa, where he obtained a degree in Statistics and Computer Science. Subsequently, he moved to France where he studied at the University of Grenoble Alpes and obtained a master's degree in Data Science. Armel's career has placed him in various internships and study projects in Burkina Faso and France. He also works in several personal and collective projects.</p>
+                    <p class="text-muted">Alhousseni KEITA is a Data Scientist, an expert in data engineering and data management, with experience in statistical analysis. He is passionate about Data Mining, Machine Learning, Neural Network and Deep Learning. My technical skills cover a number of programming tools including R, Python, C, Apache Spark, SAS, SQL and HTML / CSS.</p>
+                    <p class="text-muted"></p>
                     <a class="download-resume-btn btn btn-blue wow bounce" role="button" href="main.pdf" download="main.pdf">Download Resume</a>
                 </div>
             </div>
